feat: add search functionality for broadcast recipients in MessageController
- Implemented `searchBroadcastRecipients` method in MessageController.
- Added unit tests for `searchBroadcastRecipients` and email delivery logic in MessageControllerTest.
- Updated frontend BroadcastCenter component to include advanced recipient search filters and selection.
- Enhanced user experience by allowing selection of multiple recipients and applying filters.
- Updated translations for confirmation dialogs to include product names.
- Added product categories migration to support new category structure in the database.

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -1024,7 +1024,7 @@
       "create": "创建商品",
       "edit": "编辑商品",
       "delete": "删除商品",
-      "confirmDelete": "确定要删除此商品吗？",
+      "confirmDelete": "确定要删除商品「{{name}}」吗？",
       "deleteSuccess": "商品删除成功",
       "deleteFailed": "删除商品失败",
       "addProduct": "新增商品",
@@ -1812,3 +1812,4 @@
     "unit": "单位"
   }
 }
+
