--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -831,7 +831,7 @@
       "create": "Create Product",
       "edit": "Edit Product",
       "delete": "Delete Product",
-      "confirmDelete": "Are you sure you want to delete this product?",
+      "confirmDelete": "Are you sure you want to delete \"{{name}}\"?",
       "deleteSuccess": "Product deleted successfully",
       "deleteFailed": "Failed to delete product",
       "addProduct": "Add product",
@@ -1812,3 +1812,4 @@
     "unit": "unit"
   }
 }
+
