feat: 添加联系方式区号字段到兑换记录，更新相关组件和接口以支持新字段

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -460,10 +460,16 @@
       "deliveryAddress": "Delivery Address",
       "addressRequired": "Delivery address is required",
       "addressPlaceholder": "Enter your full delivery address",
+      "addressHint": "For virtual rewards, please enter your email address. We've pre-filled your account email for convenience.",
       "contactPhone": "Contact Phone",
       "phoneRequired": "Contact phone is required",
-      "invalidPhone": "Please enter a valid phone number",
+      "invalidPhone": "Please enter a valid phone number (digits, spaces, or hyphen)",
       "phonePlaceholder": "Enter your phone number",
+      "areaCodePlaceholder": "Area code (e.g. +86)",
+      "areaCodeRequired": "Area code is required when providing a phone number",
+      "invalidAreaCode": "Please enter a valid area code",
+      "phoneRequiredWhenAreaCode": "Please provide a phone number when an area code is supplied",
+      "phoneOptionalHint": "Leave this blank if you're exchanging a virtual product.",
       "notes": "Notes",
       "notesPlaceholder": "Any special requirements or notes",
       "unitPrice": "Unit Price",
