--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -555,10 +555,16 @@
       "deliveryAddress": "收货地址",
       "addressRequired": "请输入收货地址",
       "addressPlaceholder": "请输入详细的收货地址",
+      "addressHint": "虚拟商品请填写邮箱，默认使用当前账号邮箱",
       "contactPhone": "联系电话",
       "phoneRequired": "请输入联系电话",
-      "invalidPhone": "请输入有效的手机号码",
-      "phonePlaceholder": "请输入您的手机号码",
+      "invalidPhone": "请输入有效的电话号码（可包含数字、空格或短横线）",
+      "phonePlaceholder": "请输入您的电话号码",
+      "areaCodePlaceholder": "区号（如 +86）",
+      "areaCodeRequired": "填写电话号码时必须填写区号",
+      "invalidAreaCode": "请输入有效的区号",
+      "phoneRequiredWhenAreaCode": "填写区号时请同时填写电话号码",
+      "phoneOptionalHint": "虚拟商品可留空电话号码",
       "notes": "备注信息",
       "notesPlaceholder": "如有特殊要求请在此说明",
       "unitPrice": "单价",
