feat: 添加消息优先级功能，支持根据优先级排序和显示徽章；更新邮件服务配置，增强国际化支持

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -544,6 +544,9 @@
       "high": "High",
       "urgent": "Urgent"
     },
+    "labels": {
+      "announcement": "Announcement"
+    },
     "types": {
       "system": "System",
       "notification": "Notification",
