feat: 增强邮件投递功能，添加状态和错误信息；更新消息模型以支持优先级字段；改进广播中心以显示邮件投递状态和错误；优化系统日志页面的查询功能

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -707,6 +707,17 @@
         "failedHint": "These users could not be notified. Try again later.",
         "invalidHint": "These IDs were removed because matching users were not found."
       },
+      "email": {
+        "status": {
+          "sent": "Email sent",
+          "partial": "Email partially delivered",
+          "failed": "Email delivery failed",
+          "skipped": "Email not sent"
+        },
+        "summary": "Email batches: attempted {{attempted}}, succeeded {{success}}, failed {{failed}}.",
+        "missing": "Users without email: {{count}}",
+        "errorsTitle": "Email issues"
+      },
       "history": {
         "title": "Broadcast history",
         "description": "Recent broadcasts and delivery status.",
