Add integration and unit tests for admin statistics and request logging middleware
- Implemented AdminStatsIntegrationTest to validate the statistics returned by the admin controller.
- Created a mock database schema and populated it with test data for users, transactions, carbon records, and messages.
- Added assertions to check the correctness of the aggregated data returned by the getStats method.
- Developed RequestLoggingMiddlewareTest to ensure proper handling of request IDs.
- Included tests for injecting UUIDs, replacing invalid request IDs, and preserving valid request IDs.

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -816,7 +816,65 @@
       "trendsCarbonSaved": "Carbon Saved (kg)",
       "autoRefresh": "Auto refresh",
       "refreshNow": "Refresh",
-      "lastUpdated": "Last updated"
+      "lastUpdated": "Last updated",
+      "noData": "No data available",
+      "trendsCarbonAverage": "Carbon Saved (7d avg)",
+      "keyInsights": "Key Insights",
+      "keyInsightsSubtitle": "Auto-generated ratios calculated from the latest stats.",
+      "transactionStatusTitle": "Transaction Status Breakdown",
+      "transactionStatusSubtitle": "Distribution of pending, approved, and rejected submissions.",
+      "userStatusTitle": "User Status",
+      "userStatusSubtitle": "Active vs inactive users · New in 30 days: {{newUsers}}",
+      "exchangeStatusTitle": "Exchange Workflow",
+      "exchangeStatusSubtitle": "Monitor completion rates and backlog at a glance.",
+      "messageStatusTitle": "Message Attention",
+      "messageStatusSubtitle": "Unread vs read messages requiring follow-up.",
+      "topCarbonDaysTitle": "Top Carbon Saving Days (30d)",
+      "topCarbonDaysSubtitle": "Highlighting the biggest daily carbon reductions recently.",
+      "viewActivities": "View activities",
+      "statusPending": "Pending",
+      "statusApproved": "Approved",
+      "statusRejected": "Rejected",
+      "statusOther": "Other",
+      "statusActive": "Active",
+      "statusInactive": "Inactive",
+      "statusCompleted": "Completed",
+      "newUsers30dShare": "Share of total: {{value}}",
+      "pendingTransactions": "Pending Transactions",
+      "carbonSaved7d": "Carbon Saved (7d)",
+      "summaryCarbonTrendUp": "↑ {{value}} kg vs last week ({{rate}})",
+      "summaryCarbonTrendDown": "↓ {{value}} kg vs last week ({{rate}})",
+      "readMessages": "Read",
+      "insights": {
+        "approvalRate": "Approval rate",
+        "approvalRateHint": "{{approved}} of {{total}} transactions approved",
+        "carbonPerUser": "Carbon saved per active user",
+        "carbonPerUserHint": "Based on {{active}} active users",
+        "carbonLast7Days": "Carbon saved (last 7 days)",
+        "carbonLast7DaysDeltaPositive": "+{{delta}} kg ({{rate}} vs previous 7 days)",
+        "carbonLast7DaysDeltaNegative": "-{{delta}} kg ({{rate}} vs previous 7 days)",
+        "unreadRate": "Unread message rate",
+        "unreadRateHint": "{{unread}} unread of {{total}} messages",
+        "pointsRedemption": "Points redeemed vs awarded",
+        "pointsRedemptionHint": "{{spent}} spent of {{awarded}}",
+        "transactionsPerUser": "Transactions per active user",
+        "transactionsPerUserHint": "Average across {{active}} active users",
+        "averageDailyCarbon": "Average daily carbon (30d)",
+        "averageDailyCarbonHint": "Calculated from {{records}} approved records in the last 30 days"
+      },
+      "recentPendingTransactions": "Pending point approvals",
+      "recentPendingTransactionsSubtitle": "Latest transactions waiting for admin review.",
+      "unknownUser": "Unknown user",
+      "noPendingTransactions": "No pending transactions right now.",
+      "recentPendingCarbon": "Pending carbon records",
+      "recentPendingCarbonSubtitle": "Submission queue awaiting verification.",
+      "unknownActivity": "Unknown activity",
+      "noPendingCarbon": "No pending carbon records.",
+      "latestUsers": "Latest users",
+      "latestUsersSubtitle": "Most recent registrations.",
+      "statusUnknown": "Unknown",
+      "noEmail": "No email on file",
+      "noRecentUsers": "No recent sign-ups."
     },
     "users": {
       "confirmToggleAdmin": "Set user {{username}} as admin?\n(OK = Admin; Cancel = Regular User)",
@@ -1899,6 +1957,7 @@
     "pcs": "pcs",
     "piece": "piece",
     "pieces": "pieces",
-    "unit": "unit"
+    "unit": "unit",
+    "points": "pts"
   }
 }
