--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -911,7 +911,65 @@
       "trendsCarbonSaved": "碳减排（kg）",
       "autoRefresh": "自动刷新",
       "refreshNow": "立即刷新",
-      "lastUpdated": "上次更新时间"
+      "lastUpdated": "上次更新时间",
+      "noData": "暂无数据",
+      "trendsCarbonAverage": "碳减排（7日均值）",
+      "keyInsights": "关键洞察",
+      "keyInsightsSubtitle": "根据最新统计自动计算的重要指标。",
+      "transactionStatusTitle": "交易状态分布",
+      "transactionStatusSubtitle": "查看待审核、已通过、已拒绝的占比。",
+      "userStatusTitle": "用户状态",
+      "userStatusSubtitle": "活跃 vs 未激活 · 近30天新增：{{newUsers}}",
+      "exchangeStatusTitle": "兑换流程",
+      "exchangeStatusSubtitle": "追踪已完成与待处理兑换情况。",
+      "messageStatusTitle": "消息关注度",
+      "messageStatusSubtitle": "未读与已读消息的对比。",
+      "topCarbonDaysTitle": "近30天碳减排高峰",
+      "topCarbonDaysSubtitle": "显示最近碳减排最高的日期。",
+      "viewActivities": "查看活动",
+      "statusPending": "待处理",
+      "statusApproved": "已通过",
+      "statusRejected": "已拒绝",
+      "statusOther": "其他",
+      "statusActive": "活跃",
+      "statusInactive": "未激活",
+      "statusCompleted": "已完成",
+      "newUsers30dShare": "占比：{{value}}",
+      "pendingTransactions": "待审核交易",
+      "carbonSaved7d": "7日碳减排",
+      "summaryCarbonTrendUp": "↑ 较上周增加 {{value}} kg（{{rate}}）",
+      "summaryCarbonTrendDown": "↓ 较上周减少 {{value}} kg（{{rate}}）",
+      "readMessages": "已读",
+      "insights": {
+        "approvalRate": "审核通过率",
+        "approvalRateHint": "{{approved}} / {{total}} 笔交易通过",
+        "carbonPerUser": "人均碳减排（活跃用户）",
+        "carbonPerUserHint": "基于 {{active}} 位活跃用户",
+        "carbonLast7Days": "近7天碳减排",
+        "carbonLast7DaysDeltaPositive": "较前7天增加 {{delta}} kg（{{rate}}）",
+        "carbonLast7DaysDeltaNegative": "较前7天减少 {{delta}} kg（{{rate}}）",
+        "unreadRate": "消息未读率",
+        "unreadRateHint": "{{unread}} 条未读 / {{total}} 条总数",
+        "pointsRedemption": "积分兑换率",
+        "pointsRedemptionHint": "已兑换 {{spent}} / 已发放 {{awarded}}",
+        "transactionsPerUser": "人均交易次数（活跃用户）",
+        "transactionsPerUserHint": "平均分布在 {{active}} 位活跃用户",
+        "averageDailyCarbon": "近30天日均碳减排",
+        "averageDailyCarbonHint": "基于近30天 {{records}} 条已审核记录计算"
+      },
+      "recentPendingTransactions": "最新待审核积分交易",
+      "recentPendingTransactionsSubtitle": "最近提交的积分交易，等待管理员审核。",
+      "unknownUser": "未知用户",
+      "noPendingTransactions": "目前没有待审核的交易。",
+      "recentPendingCarbon": "最新待审核碳记录",
+      "recentPendingCarbonSubtitle": "排队等待审核的碳减排记录。",
+      "unknownActivity": "未知活动",
+      "noPendingCarbon": "目前没有待审核的碳记录。",
+      "latestUsers": "最新注册用户",
+      "latestUsersSubtitle": "最近注册的用户列表。",
+      "statusUnknown": "状态未知",
+      "noEmail": "暂无邮箱",
+      "noRecentUsers": "近期没有新的注册用户。"
     },
     "users": {
       "confirmToggleAdmin": "是否将用户 {{username}} 设置为管理员？\n(点“确定”为管理员；“取消”为普通用户)",
@@ -1899,6 +1957,7 @@
     "pcs": "件",
     "piece": "件",
     "pieces": "件",
-    "unit": "单位"
+    "unit": "单位",
+    "points": "积分"
   }
 }
