feat: 更新活动统计功能，添加记录总数、批准、待处理和拒绝记录字段；调整前端展示以反映新数据

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -874,7 +874,9 @@
       "latestUsersSubtitle": "Most recent registrations.",
       "statusUnknown": "Unknown",
       "noEmail": "No email on file",
-      "noRecentUsers": "No recent sign-ups."
+      "noRecentUsers": "No recent sign-ups.",
+      "approvedActivities": "Approved Activities",
+      "rejectedActivities": "Rejected Activities"
     },
     "users": {
       "confirmToggleAdmin": "Set user {{username}} as admin?\n(OK = Admin; Cancel = Regular User)",
