--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -207,10 +207,27 @@
     },
     "verification": {
       "title": "邮箱验证",
-      "subtitle": "我们已向您的邮箱发送了验证码",
-      "code": "验证码",
+      "description": "我们已将验证码发送至 {{email}}，请在下方输入 6 位验证码或直接点击邮件中的链接。",
+      "yourEmail": "您的邮箱",
+      "checkInbox": "验证邮件已发送至 {{email}}，请及时查收。",
+      "emailLabel": "邮箱地址",
+      "emailPlaceholder": "name@example.com",
+      "emailRequired": "请输入邮箱地址。",
+      "codeLabel": "验证码",
+      "codeRequired": "请输入邮箱验证码。",
+      "codePattern": "验证码应为 6 位数字。",
+      "codeSuccess": "邮箱验证成功，正在跳转…",
+      "codeFailed": "验证码无效或已过期。",
+      "tokenVerifying": "正在验证邮箱…",
+      "tokenSuccess": "邮箱验证成功，正在跳转…",
+      "tokenFailed": "验证链接无效或已过期。",
+      "submit": "完成验证",
+      "submitting": "提交中…",
       "resend": "重新发送",
-      "verify": "验证"
+      "resendCountdown": "{{seconds}} 秒后可再次发送",
+      "resendSuccess": "验证邮件已重新发送",
+      "backToLogin": "返回登录",
+      "helper": "仍未收到邮件？请检查垃圾邮件或稍后再试。"
     },
     "resetPassword": {
       "title": "重置密码",
