feat: 添加重置密码页面与路由，完善重置流程文案与校验
- 新增 ResetPasswordPage（包含表单、前端校验、提交逻辑、提示与跳转）
- 在 router 中添加 /reset-password 路由并异步加载页面
- 本地化：新增/调整中英文翻译键（重置新密码标题/说明、表单标签、错误提示、成功/失败/提交文案、最小密码长度提示等）
- fix(email): 生成密码重置链接时优先使用 FRONTEND_URL 环境变量（回退至 APP_URL），确保链接指向前端
- fix(template): 修复 verification_code.txt 中的乱码并统一“验证链接 / Verification link”文案
- chore: 将 /scripts/ 添加到 .gitignore

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -138,13 +138,25 @@
       "title": "Reset Password",
       "subtitle": "Enter your email address and we'll send you a reset link",
       "email": "Email Address",
-      "submit": "Send Reset Link",
-      "backToLogin": "Back to Login"
+      "submit": "Update password",
+      "backToLogin": "Back to Login",
+      "newTitle": "Set a new password",
+      "newSubtitle": "Enter your new password for {{email}}.",
+      "instructions": "Your new password must be at least 8 characters long.",
+      "newPasswordLabel": "New password",
+      "confirmPasswordLabel": "Confirm new password",
+      "confirmPasswordRequired": "Please confirm your new password.",
+      "passwordMismatch": "Passwords do not match.",
+      "tokenMissing": "The reset link is invalid or has already been used.",
+      "success": "Password reset successful. Redirecting you to sign in...",
+      "failed": "Unable to reset password. Please request a new link or try again later.",
+      "submitting": "Updating password..."
     },
     "errors": {
       "INVALID_CREDENTIALS": "Incorrect username or password. Please try again.",
       "LOGIN_FAILED": "Unable to sign in right now. Please try again later."
-    }
+    },
+    "passwordMinLength": "Password must be at least 8 characters."
   },
   "onboarding": {
     "title": "Complete School and Class Information",
